Use List rather than LinkedList where appropriate. Mating pool concept added.